--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "classnames": "^2.5.1",
+    "react": "18.2",
+    "react-dom": "18.2",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.6",
+    "sass": "^1.86.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
